implement more flexible solutions for offer requests
